# studies

./: .gitignore  zed_config.json
databricks/: 00 - Databricks MOC.md  db-autoloader.md  db-databricks.md  db-datalake.md  db-dbfs.md  db-delta.md  db-dlt.md  db-notebooks.md  db-secrets.md  db-spark.md  db-sparksql.md  db-streaming.md  db-unity-catalog.md  db-workflows.md
databricks/Formula1/: update_notebooks.py
databricks/Formula1/demo/: 1. temp_sql_views.ipynb  2. sql_objects_demo.ipynb  TempViews.md  temp_sql_views.ipynb
databricks/Formula1/ingestion/: 0. create_processed_db.ipynb  0. ingest_all_files.ipynb  1. ingest_circuits_file.ipynb  1.ingest_circuits_file.ipynb  2. ingest_races_file.ipynb  3. ingest_constructors_file.ipynb  4. ingest_drivers_file.ipynb  5. ingest_results_file.ipynb  6. ingest_pitstops_file.ipynb  (+3 more)
de-python/: README.md  pyproject.toml  run.py
de-python/config/: config.yml
de-python/dbt_monitor/: parser.py  run_summary.py  summirize.py
de-python/files/: data.json
de-python/notes/: import.md
de-python/src/: run.py
de-python/src/config/: config.yml
de-python/src/dbt_monitor/: parser.py  run_summary.py  summarize.py
de-python/src/utils/: utils.py
de-python/tests/: tests.py
de-python/utils/: utils.py
de-python/week-01/: monday.md  monday.py  thursday.py  tuesday.py  wednesday.py
de-python/week_01/: friday.py  thursday.py  tuesday.py  wednesday.py
dsa/: dsa.md  pyproject.toml
dsa/linked_list/: exercises.py  linked_list.md  linked_list.py  ll.py  main.py
dsa/test/: test.md  test_ll_exercise.py
(+17 files in other folders)
