[project]
name = "de-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]

[build-system]                          # ← add this
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]         # ← and this
where = ["src"]

[tool.uv]
package = true
